nuxt/assets/css/tailwind.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  * {
    user-select: none;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-smooth: never;
    @apply transition ease-in-out duration-300;
  }

  *::-webkit-scrollbar {
    display: none;
  }

  img {
    pointer-events: none;
  }

  .nuxt-icon svg {
    margin-bottom: 0 !important;
  }

  .shadow-default {
    box-shadow: 0px 4px 8px 4px rgba(255, 255, 255, 1);
  }

  body {
    @apply bg-dark;
    @apply text-white;
  }
}

@layer components {
}

